# codex-agent-herness

./: CHANGELOG.md  CODEOWNERS  README.md  copier.yml  noxfile.py  pyproject.toml  tasks.md
template/: .claude.instructions.md  README.md  apm.yml  orval.config.ts  package.json  playwright.config.ts  pyproject.toml  standard.yml
template/.agents/skills/pm-prd-kit/: SKILL.md
template/.agents/skills/pm-prd-kit/checklists/: prd-quality-checklist.md
template/.agents/skills/pm-prd-kit/templates/: prd-template.md
template/.codex/agents/: pm-orchestrator.md
template/.codex/agents/subagents/: pm-prd-critic.md  pm-prd-researcher.md  pm-prd-writer.md
template/apps/web/src/lib/: apiClient.ts
template/docs/: api-mock.md  db-seed-scenarios.md
template/docs/_meta/: doc-index.yaml
template/docs/harness/: changelog.md
template/docs/harness/adoptions/: README.md
template/evals/datasets/golden/: basic.jsonl
template/evals/datasets/redteam/: prompt_injection.jsonl
template/evals/reports/: pr-20260517T114605Z.json
template/policies/: pii-policy.md  safety-policy.md
template/prompts/: customer_support_v1.md
template/scripts/: run_evals.py
template/scripts/docs/: doc-impact.mjs  verify-docs.mjs
template/services/ai/src/adapters/: fake_provider.py
template/services/ai/src/api/: main.py
template/services/ai/src/domain/: models.py
template/services/ai/tests/: conftest.py  test_api.py  test_architecture_boundary.py  test_use_case.py
template/tests/api/: health.spec.ts
template/tests/e2e/support/: seedScenario.ts
template/tests/monkey/: monkey.spec.ts
(+21 files in other folders)
